Bug 219864 - Kget doesn't download torrent files
Summary: Kget doesn't download torrent files
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-23 19:38 UTC by Rosetzky Cedric
Modified: 2009-12-24 14:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rosetzky Cedric 2009-12-23 19:38:29 UTC
Version:            (using Devel)
Compiler:          gcc-4.3.4 
OS:                Linux
Installed from:    Compiled sources

When the torrent plugins is disabled (I use Vuze to download my torrents), Kget doesn't download .torrent files. The download just doesn't start.
Comment 1 Dario Massarin 2009-12-24 00:40:28 UTC
This is a pretty serious one! Thanks a lot for reporting this, and looking forward your next report ;)

Matthias, the problem is related with:

datasourcefactory.cpp line #160:

if ((prot == "http" || prot == "https" || prot == "ftp"  || prot == "sftp") &&
    (!url.fileName().endsWith(QLatin1String(".torrent"))) &&
    (!url.fileName().endsWith(QLatin1String(".metalink"))) &&
    (!url.fileName().endsWith(QLatin1String(".meta4"))))

So there is the same problem with .metalink and .meta4 files. Matthias, could you take a look at this?
Comment 2 Matthias Fuchs 2009-12-24 13:34:25 UTC
SVN commit 1065829 by mfuchs:

Does not check the protocoll when finding the fileSize.
NOTE: Move findingFileSize to TransferDataSource in 4.5

BUG:219864

 M  +10 -21    datasourcefactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065829
Comment 3 Rosetzky Cedric 2009-12-24 13:41:19 UTC
@Dario => You're welcome, and thanks for your answer. It usually feels like I'm bothering the devs when I'm reporting a bug.
Only Kget and Dolphin devs seems to relly take bug reports seriously, so thanks to you ;).
Reported a new bug by the way ;). https://bugs.kde.org/show_bug.cgi?id=219946

Great job Matthias, THIS is reactivity ;).
Comment 4 Matthias Fuchs 2009-12-24 13:55:22 UTC
Thx, but in this case Dario did all the work by finding the issue. :)
Comment 5 Rosetzky Cedric 2009-12-24 14:31:45 UTC
Great collective job then ;)