Does not check the protocoll when finding the fileSize. NOTE: Move findingFileSize to TransferDataSource in 4.5

BUG:219864

svn path=/trunk/KDE/kdenetwork/kget/; revision=1065829